--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="./Inter Font/inter-fontstylesheet.css" />
     <link
       rel="stylesheet"
-      media="screen and (max-width:400px)"
+      media="screen and (max-width:500px)"
       href="mobile.css"
     />
     <link
       rel="stylesheet"
-      media="screen and (max-width:900px)"
+      media="screen and (max-width:1000px)"
       href="width-1000.css"
     />
   </head>
@@ -345,6 +345,64 @@
         </div>
 
       </div>
+
+    </section>
+
+
+    <section class="footer">
+
+
+      <div class="container footer__content-up">
+
+        <div class="nav__logo footer__logo">
+          <img src="./img/Pern Logo.png" />
+          <div class="logo__text">
+            <p id="logo__text-1">PERN</p>
+            <p id="Logo__text-2">Stack</p>
+          </div>
+        </div>
+
+        <div class="footer__navigation">
+
+
+          <a>Home</a>
+          <a>About</a>
+          <a>Pricing</a>
+          <a>Contact</a>
+        </div>
+
+
+        <div class=" mobile__footer-navigation">
+          <div class="mobile__footer-content">
+
+            <a>Home</a>
+          <a>About</a>
+          <a>Pricing</a>
+
+          </div>
+          
+          <a id="contact">Contact</a>
+        </div>
+
+      </div>
+
+    
+      <div class="container footer__content-down">
+
+
+        <p id="footer__text">© 2023 IMP PernStack. All rights reserved.</p>
+
+        <div class="footer__link">
+          <a >Terms</a>
+          <a >Privacy</a>
+          <a >Cookies</a>
+        </div>
+
+
+
+      </div>
+
+
 
     </section>
   </body>
